Add the section on Virtual Threads