@@ -50,17 +50,70 @@ For more information on this feature, see [JEP 433](https://openjdk.org/jeps/433
 
 [Project Loom](http://openjdk.java.net/projects/loom/) strives to simplify maintaining concurrent applications in Java by introducing *virtual threads* and an API for *structured concurrency*, among other things. Java 20 contains three JEPs that originate from Project Loom: 
 
-* Virtual Threads;
-* Scoped Values;
-* Structured Concurrency.
+* Virtual threads;
+* Scoped values;
+* Structured concurrency.
 
 ### JEP 436: Virtual Threads (Second Preview)
 
-[feature summary]
+Threads have been part of Java since the very beginning, and in light of the work in Project Valhalla these 'classic threads' are now called 'platform threads'. A platform thread runs Java code on an underlying OS thread and captures the OS thread for the code's entire lifetime. The number of platform threads is therefore limited to the number of OS threads that can be started on the machine in question.
+
+Modern applications, however, might need many more threads than that; when dealing with tens of thousands of requests (or more) at the same time, for example. This is where *virtual threads* come in. A virtual thread is an instance of `java.lang.Thread` that runs Java code on an underlying OS thread, but does not capture the OS thread for the code's entire lifetime. This means that many virtual threads can run their Java code on the same OS thread, effectively sharing it. The number of virtual threads can thus be much larger than the number of OS threads.
+
+Aside from being plentiful, virtual threads are also cheap to create and dispose of. This means that a web framework, for example, can dedicate a new virtual thread to the task of handling a request and still be able to process thousands or millions of requests at once.
+
+Virtual threads are cheap and plentiful, and thus should never be pooled: A new virtual thread should be created for every application task. Most virtual threads will thus be short-lived and have shallow call stacks, performing as little as a single HTTP client call or a single JDBC query. Platform threads, by contrast, are heavyweight and expensive, and thus often must be pooled. They tend to be long-lived, have deep call stacks, and be shared among many tasks.
+
+#### Typical Use Cases
+
+Using virtual threads does not require learning new concepts, though it may require unlearning habits developed to cope with today's high cost of threads. Virtual threads will not only help application developers — they will also help framework designers provide easy-to-use APIs that are compatible with the platform's design without compromising on scalability.
+
+#### Creating Virtual Threads
+
+Just like a platform thread, a virtual thread is an instance of `java.lang.Thread`. So you can use a virtual thread in exactly the same way as a platform thread.
+
+Creating a virtual thread is a bit different, but just as easy as creating a platform thread:
+
+```java
+Thread platformThread = new Thread(() -> {
+    // do some work in a platform thread
+});
+
+Thread virtualThread = Thread.startVirtualThread(() -> {
+    // do some work in a virtual thread
+});
+```
+
+When your concurrent code uses the `ExecutorService` already, switching to virtual threads even takes less effort:
+
+```java
+var platformThreadsExecutor = Executors.newCachedThreadPool();
+platformThreadsExecutor.submit(() -> {
+    // do some work in a platform thread
+});
+platformThreadsExecutor.close();
+
+try (var virtualThreadsExecutor = Executors.newVirtualThreadPerTaskExecutor()) {
+    virtualThreadsExecutor.submit(() -> {
+        // do some work in a virtual thread
+    });
+} // close() is called implicitly
+```
+
+Note that the `ExecutorService` interface was  adjusted in Java 19 to extend `AutoCloseable`, so that it may be used in a try-with-resources construct.
 
 #### What's Different From Java 19?
 
-[changes since previous preview]
+The feature is in the 'second preview' stage, to allow for more feedback. On top of that, a few API changes were made permanent and as a result are not proposed for preview any longer. They've been made permanent because they involve functionality that is broadly useful and is not specific to virtual threads, including:
+
+* new methods in `Thread`
+  * `join(Duration)`; 
+  * `sleep(Duration)`; 
+  * `threadId()`. 
+* new methods in `Future` (to examine task state and result)
+* the change to make `ExecutorService` extend `AutoCloseable`, so that it can be used in a try-with-resources block.
+
+On top of that, [the degradations to `ThreadGroup`](https://openjdk.org/jeps/425#java-lang-ThreadGroup) were also made permanent.
 
 #### More Information
 
@@ -76,17 +129,36 @@ They are preferred to thread-local variables, especially when using large number
 Since Java 1.2 we can make use of `ThreadLocal` variables, which confine a certain value to the thread that created it.
 In [some cases](https://stackoverflow.com/a/817926) it can be a simple way to achieve thread-safety.
 
-But thread-local variables also come with a few caveats. Every thread-local variable is mutable, which makes it hard to discern which component updates shared state and in what order. There's also the risk of memory leaks when using thread-local variables, because unless you call `remove()` on the `ThreadLocal` the data is retained until it is garbage collected (which is only after the thread has finished). And finally, thread-local variables of a parent thread can be inherited by child threads, which results in the child thread having to allocate storage for every thread-local variable previously written in the parent thread.
+But thread-local variables also come with a few caveats. Every thread-local variable is mutable, which makes it hard to discern which component updates shared state and in what order. There's also the risk of memory leaks when using thread-local variables, because unless you call `remove()` on the `ThreadLocal` the data is retained until it is garbage collected (which is only after the thread has terminated). And finally, thread-local variables of a parent thread can be inherited by child threads, which results in the child thread having to allocate storage for every thread-local variable previously written in the parent thread.
 
-TODO
+These drawbacks become more apparent now that virtual threads have been introduced, because in theory millions of them could be active at the same time - each with their own thread-local variable - which would undoubtedly result in a very significant memory footprint.
+
+#### Scoped Values
+
+Like a thread-local variable, a scoped value has multiple incarnations, one per thread. Unlike a thread-local variable, a scoped value is written once and is then immutable, and is available only for a bounded period during execution of the thread.
+
+JEP 429 illustrates the use of scoped values by the pseudo code example below:
+
+```java
+final static ScopedValue<...> V = new ScopedValue<>();
+
+// In some method
+ScopedValue.where(V, <value>)
+           .run(() -> { ... V.get() ... call methods ... });
+
+// In a method called directly or indirectly from the lambda expression
+... V.get() ...
+```
+
+We see that `ScopedValue.where(...)` is called, presenting a scoped value and the object to which it is to be bound. The call to `run(...)` binds the scoped value, providing an incarnation that is specific to the current thread, and then executes the lambda expression passed as argument. During the lifetime of the `run(...)` call, the lambda expression, or any method called directly or indirectly from that expression, can read the scoped value via the value’s `get()` method. After the `run(...)` method finishes, the binding is destroyed.
 
 #### Typical Use Cases
 
-
+Scoped values will be useful in all places where currently thread-local variables are used for the purpose of one-way transmission of unchanging data. 
 
 #### What's Different From Java 19?
 
-[changes since previous preview]
+Java 19 didn't contain anything related to scoped values yet, so Java 20 is the first time we get to experiment with scoped values. Note that the JEP is in the [incubator](https://openjdk.org/jeps/11) status, so it's about a non-final API that's in an incubator stage. You'll need to add `--add-modules jdk.incubator.concurrent` to the command-line to be able to take the feature for a test drive.
 
 #### More Information
 
@@ -94,7 +166,6 @@ For more information on this feature, see [JEP 429](https://openjdk.org/jeps/429
 
 ### JEP 437: Structured Concurrency (Second Incubator)
 
-[feature summary]
 
 #### What's Different From Java 19?
 
